# adventlang

./: .gitignore  Cargo.toml  compiling.txt  llvm.txt  readme.md  rust-toolchain  todo.txt
.cargo/: config.toml
ast/: Cargo.toml
compiler/: Cargo.toml
compiler/src/: codegen.rs  compile.rs  desugar.rs  hir.rs  hir_display.rs  inference.rs  inference_pass.rs  lib.rs  lower.rs  main.rs  runtime.rs  stdlib.rs  stdlib_impl.rs
compiler/src/poc/: jit.rs  mod.rs  vec.rs  vec_cc.rs  vec_impl.rs  vec_ptr_gc.rs
compiler/src/runtime/: gc.rs  heap.rs  list.rs  mod.rs  print.rs  str.rs
compiler/tests/: test_corpus.rs
compiler/tests/corpus/: basics.al  interpolations.al  loops.al  str.al
compiler/tests/corpus/aoc/: 2025_day01.al
compiler/tests/corpus/fns/: generic_arg.al  var_resolved_concretely.al
compiler_v1/: Cargo.toml
compiler_v1/src/: codegen.rs  desugar_pass.rs  hir.rs  hir_display.rs  inference_pass.rs  main.rs
compiler_v1/src/poc/: cranelift_jit.rs  mod.rs  vec_cc.rs  vec_ptr_gc.rs  vec_sret.rs
compiler_v1/src/runtime/: gc.rs  heap.rs
compiler_v2/: Cargo.toml
parser/: Cargo.toml
parser_combinators/: Cargo.toml
parser_v2/: Cargo.toml
self-hosted/: parser.al
tests/: Cargo.toml  doc1.txt  doc1_2024_day08.txt  doc2.txt
tree-sitter-adventlang/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
ts/: ast.ts  parser_combinators.ts
type_checker/: Cargo.toml
wa/: 1_hello.wat  3_heap.ts  3_heap.wat  echo.wasm  echo.wat  echo2.wasm  (+2 more)
(+85 files in other folders)
