[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
thiserror = "2.0.12"
indenter = "0.3.3"
hexdump = "0.1.2"
parser = { path = "../parser" }
type_checker = { path = "../type_checker" }
cranelift = "0.126.1"
cranelift-native = "0.126.1"
cranelift-module = "0.126.1"
cranelift-jit = "0.126.1"
cranelift-reader = "0.126.1"
rstest = "0.26.1"
