[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0-force-dynamic"] }
lazy_static = "1.5.0"
fxhash = "0.2.1"
libffi = "4.0.0"
ouroboros = "0.18.5"
thiserror = "2.0.12"
compact_str = "0.9.0"
indenter = "0.3.3"
safer-ffi = "0.1.13"
hexdump = "0.1.2"
parser = { path = "../parser" }
# ast = { path = "../ast" }
